--- a/style.css
+++ b/style.css
@@ -6,6 +6,10 @@ body{
   color: whitesmoke;
   font-family: 'Cormorant Garamond', serif;
   font-size: 15pt;
+
+  @media(max-width: 800px){
+    background-color: purple;
+  }
 }
 
 .container{
@@ -30,6 +34,10 @@ h1{
     flex-direction: column;
     align-items: center;
   }
+
+  @media(max-width: 800px){
+    grid-template-columns: repeat(2, 1fr);
+  }
 }
 
 .matrix{
@@ -37,6 +45,24 @@ h1{
   width: 300px;
   box-shadow: 3px 3px 6px black;
   padding: 5px;
+
+  @media(max-width: 800px){
+    width: 90%;
+  }
+}
+
+img{
+  height: 200px;
+  max-width: 100%;
+  max-height: 100vh;
+
+  @media(max-width: 600px){
+    width: 430px;
+  }
+
+  @media(max-width: 800px){
+    width: 500px;
+  }
 }
 
 .matrix:hover{
